; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/sw/rxe/extr_rxe_comp.c_retransmit_timer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/sw/rxe/extr_rxe_comp.c_retransmit_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rxe_qp = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32, i32 }
%struct.timer_list = type { i32 }

@retrans_timer = common dso_local global i32 0, align 4
@qp = common dso_local global %struct.rxe_qp* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @retransmit_timer(%struct.timer_list* %0) #0 {
  %2 = alloca %struct.timer_list*, align 8
  %3 = alloca %struct.rxe_qp*, align 8
  store %struct.timer_list* %0, %struct.timer_list** %2, align 8
  %4 = load %struct.rxe_qp*, %struct.rxe_qp** %3, align 8
  %5 = ptrtoint %struct.rxe_qp* %4 to i32
  %6 = load %struct.timer_list*, %struct.timer_list** %2, align 8
  %7 = load i32, i32* @retrans_timer, align 4
  %8 = call %struct.rxe_qp* @from_timer(i32 %5, %struct.timer_list* %6, i32 %7)
  store %struct.rxe_qp* %8, %struct.rxe_qp** %3, align 8
  %9 = load %struct.rxe_qp*, %struct.rxe_qp** %3, align 8
  %10 = getelementptr inbounds %struct.rxe_qp, %struct.rxe_qp* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %1
  %14 = load %struct.rxe_qp*, %struct.rxe_qp** %3, align 8
  %15 = getelementptr inbounds %struct.rxe_qp, %struct.rxe_qp* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 1, i32* %16, align 8
  %17 = load %struct.rxe_qp*, %struct.rxe_qp** %3, align 8
  %18 = getelementptr inbounds %struct.rxe_qp, %struct.rxe_qp* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = call i32 @rxe_run_task(i32* %19, i32 1)
  br label %21

21:                                               ; preds = %13, %1
  ret void
}

declare dso_local %struct.rxe_qp* @from_timer(i32, %struct.timer_list*, i32) #1

declare dso_local i32 @rxe_run_task(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
